--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,12 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 
 			<!-- load jQuery and the plugin -->
+			
+			
 			<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 			<script src="js/loginpop.js"></script>
-			<script src="http://maps.googleapis.com/maps/api/js"></script>
-			<script>
-				function initialize() {
-				  var mapProp = {
-					center:new google.maps.LatLng(51.508742,-0.120850),
-					zoom:5,
-					mapTypeId:google.maps.MapTypeId.ROADMAP
-				  };
-				  var map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
-				}
-				google.maps.event.addDomListener(window, 'load', initialize);
+			
+			<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false">
 			</script>
 	</head>
 	<body>
@@ -98,7 +91,18 @@
 					<h4>SolarLegacy Ireland ltd. National College of Ireland, Mayor Street, Dublin 1</h4>
 					<h4>Tel: 0123455</h4>					
 				</div>
-				<div id="googleMap"></div>
+				<div style="overflow:hidden;height:380px;width:960px;">
+					<div id="gmap_canvas" style="height:380px;width:960px;"></div>
+						<style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
+							<a class="google-map-code" href="http://www.trivoo.net" id="get-map-data">www.trivoo.net</a>
+				</div>
+					<script type="text/javascript"> function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(53.3491685,-6.243370599999935),
+					mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"),
+					myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(53.3491685, -6.243370599999935)});
+					infowindow = new google.maps.InfoWindow({content:"<b>SolarLegacy Ireland ltd. National College of Ireland,</b><br/>Mayor Street,<br/>  Dublin 1" });
+					google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}
+					google.maps.event.addDomListener(window, 'load', init_map);
+					</script>
 			</div>
 			<div id="details">
 				<span id="detailstyle">SolarLegacy Ireland Ltd. <br>National College of Ireland, Mayor Street, Dublin 1. <br>Tel: +353 01 9876543 Email: info@solarlegacy.ie</span>
